--- a/Profilepic.html
+++ b/Profilepic.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <title>Profile Page</title>
-    <link rel="stylesheet" href="./style.css">
+    <link rel="stylesheet" href="./profilepic.css">
     <link rel="stylesheet" href="/node_modules/@fortawesome/fontawesome-free/css/all.css">
 </head>    
 <body>
