--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
 						<input class="input-form" type="name" placeholder="Enter your full name" required><br><br>
 						<input class="input-form" type="email" placeholder="Enter your email" required><br><br>
 						<input class="input-form" type="password" placeholder="Enter your password" required><br><br>
-						<input class="submit-form" id="myButton" type="submit" value="Register">
+						<input class="submit-form" id="myButton2" type="submit" value="Register">
 					</form>
 				</div>
 			</div>
@@ -73,6 +73,9 @@
 
 <script type="text/javascript">
     document.getElementById("myButton").onclick = function () {
+        location.href = "./Divya-files/home-page.html";
+    };
+	document.getElementById("myButton2").onclick = function () {
         location.href = "./Divya-files/home-page.html";
     };
 </script>
