--- a/sufiyan-profile.html
+++ b/sufiyan-profile.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <title>Profile Page</title>
-    <link rel="stylesheet" href="./profilepic.css">
+    <link rel="stylesheet" href="./profilepic-divya.css">
     <link rel="stylesheet" href="/node_modules/@fortawesome/fontawesome-free/css/all.css">
 </head>    
 
@@ -75,12 +75,12 @@
                     </p>
                     <p class="user-mail">
                         <i class="fa fa-envelope">
-                        </i>sufiyan.ansari@csea.nitw.ac.in
+                        </i>anshuman.mishra@csea.nitw.ac.in
                     </p>
                     <div class="user-bio">
                         <h3>Bio</h3>
                         <p class="bio">
-                            Hey everyone. I am passionate web developer and CP enthusiast!</p>
+                            Hey everyone. I am machine learning enthusiast and love anime!</p>
                     </div>
                     <div class="profile-btn">
                         <button class="chatbtn">
