--- a/index.html
+++ b/index.html
@@ -73,10 +73,10 @@
 
 <script type="text/javascript">
     document.getElementById("myButton").onclick = function () {
-        location.href = "./Divya-files/home-page.html";
+        location.href = "./Divya-files/home-page";
     };
 	document.getElementById("myButton2").onclick = function () {
-        location.href = "./Divya-files/home-page.html";
+        location.href = "./Divya-files/home-page";
     };
 </script>
 </body>
